@@ -1,0 +1,1 @@
+tests/in7.c:12:  Duplicate identifier.  Original is at tests/in7.c:8.
